// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`When an element is hovered in visual builder mode > JSON RTE field (multiple) > should have custom cursor 1`] = `
<div
  class="go1688149084 visual-builder__cursor visible"
  data-icon="json_rte"
  data-testid="visual-builder__cursor"
>
  <div
    class="visual-builder__cursor-wrapper"
  >
    <div
      class="visual-builder__cursor-pointer go3046085498"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0.0167948 0.602214C-0.0784404 0.246792 0.246794 -0.0784402 0.602216 0.0167948L15.6457 4.04767C16.0914 4.1671 16.1259 4.78625 15.6962 4.95447L8.17161 7.90048C8.04753 7.94906 7.94936 8.04723 7.90078 8.17131L4.95449 15.6962C4.78627 16.1259 4.16712 16.0914 4.04769 15.6457L0.0167948 0.602214Z"
          fill="#5D50BE"
        />
      </svg>
    </div>
    <div
      class="visual-builder__cursor-icon go4261356330"
    >
      <svg
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M8.67113 7.5005C7.94625 7.5005 7.35863 8.08812 7.35863 8.813V9.87593C7.35863 10.1866 7.61047 10.4384 7.92113 10.4384C8.23179 10.4384 8.48363 10.1866 8.48363 9.87593V8.813C8.48363 8.70944 8.56757 8.6255 8.67113 8.6255H11.4375V15.6584H10.3575C10.0468 15.6584 9.79501 15.9103 9.79501 16.2209C9.79501 16.5316 10.0468 16.7834 10.3575 16.7834H13.9834C14.294 16.7834 14.5459 16.5316 14.5459 16.2209C14.5459 15.9103 14.294 15.6584 13.9834 15.6584H12.5625V8.6255H15.3293C15.4329 8.6255 15.5168 8.70945 15.5168 8.813V9.87593C15.5168 10.1866 15.7687 10.4384 16.0793 10.4384C16.39 10.4384 16.6418 10.1866 16.6418 9.87593V8.813C16.6418 8.08812 16.0542 7.5005 15.3293 7.5005H8.67113Z"
          fill="white"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M6.97059 2.99805C5.00307 2.99805 3.40809 4.59303 3.40809 6.56055V9.51691C3.40809 10.5707 2.55381 11.425 1.5 11.425V12.55C2.55381 12.55 3.40809 13.4043 3.40809 14.4581V17.4145C3.40809 19.382 5.00307 20.977 6.97059 20.977H7.5V19.852H6.97059C5.6244 19.852 4.53309 18.7607 4.53309 17.4145V14.4581C4.53309 13.4391 4.03059 12.5375 3.25988 11.9875C4.03059 11.4375 4.53309 10.5359 4.53309 9.51691V6.56055C4.53309 5.21435 5.6244 4.12305 6.97059 4.12305H7.5V2.99805H6.97059Z"
          fill="white"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M17.0294 2.99805C18.9969 2.99805 20.5919 4.59303 20.5919 6.56055V9.51691C20.5919 10.5707 21.4462 11.425 22.5 11.425V12.55C21.4462 12.55 20.5919 13.4043 20.5919 14.4581V17.4145C20.5919 19.382 18.9969 20.977 17.0294 20.977H16.5V19.852H17.0294C18.3756 19.852 19.4669 18.7607 19.4669 17.4145V14.4581C19.4669 13.4391 19.9694 12.5375 20.7401 11.9875C19.9694 11.4375 19.4669 10.5359 19.4669 9.51691V6.56055C19.4669 5.21435 18.3756 4.12305 17.0294 4.12305H16.5V2.99805H17.0294Z"
          fill="white"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`When an element is hovered in visual builder mode > JSON RTE field (multiple) > should have custom cursor on individual instances 1`] = `
<div
  class="go1688149084 visual-builder__cursor visible"
  data-icon="json_rte"
  data-testid="visual-builder__cursor"
>
  <div
    class="visual-builder__cursor-wrapper"
  >
    <div
      class="visual-builder__cursor-pointer go3046085498"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0.0167948 0.602214C-0.0784404 0.246792 0.246794 -0.0784402 0.602216 0.0167948L15.6457 4.04767C16.0914 4.1671 16.1259 4.78625 15.6962 4.95447L8.17161 7.90048C8.04753 7.94906 7.94936 8.04723 7.90078 8.17131L4.95449 15.6962C4.78627 16.1259 4.16712 16.0914 4.04769 15.6457L0.0167948 0.602214Z"
          fill="#5D50BE"
        />
      </svg>
    </div>
    <div
      class="visual-builder__cursor-icon go4261356330"
    >
      <svg
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M8.67113 7.5005C7.94625 7.5005 7.35863 8.08812 7.35863 8.813V9.87593C7.35863 10.1866 7.61047 10.4384 7.92113 10.4384C8.23179 10.4384 8.48363 10.1866 8.48363 9.87593V8.813C8.48363 8.70944 8.56757 8.6255 8.67113 8.6255H11.4375V15.6584H10.3575C10.0468 15.6584 9.79501 15.9103 9.79501 16.2209C9.79501 16.5316 10.0468 16.7834 10.3575 16.7834H13.9834C14.294 16.7834 14.5459 16.5316 14.5459 16.2209C14.5459 15.9103 14.294 15.6584 13.9834 15.6584H12.5625V8.6255H15.3293C15.4329 8.6255 15.5168 8.70945 15.5168 8.813V9.87593C15.5168 10.1866 15.7687 10.4384 16.0793 10.4384C16.39 10.4384 16.6418 10.1866 16.6418 9.87593V8.813C16.6418 8.08812 16.0542 7.5005 15.3293 7.5005H8.67113Z"
          fill="white"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M6.97059 2.99805C5.00307 2.99805 3.40809 4.59303 3.40809 6.56055V9.51691C3.40809 10.5707 2.55381 11.425 1.5 11.425V12.55C2.55381 12.55 3.40809 13.4043 3.40809 14.4581V17.4145C3.40809 19.382 5.00307 20.977 6.97059 20.977H7.5V19.852H6.97059C5.6244 19.852 4.53309 18.7607 4.53309 17.4145V14.4581C4.53309 13.4391 4.03059 12.5375 3.25988 11.9875C4.03059 11.4375 4.53309 10.5359 4.53309 9.51691V6.56055C4.53309 5.21435 5.6244 4.12305 6.97059 4.12305H7.5V2.99805H6.97059Z"
          fill="white"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M17.0294 2.99805C18.9969 2.99805 20.5919 4.59303 20.5919 6.56055V9.51691C20.5919 10.5707 21.4462 11.425 22.5 11.425V12.55C21.4462 12.55 20.5919 13.4043 20.5919 14.4581V17.4145C20.5919 19.382 18.9969 20.977 17.0294 20.977H16.5V19.852H17.0294C18.3756 19.852 19.4669 18.7607 19.4669 17.4145V14.4581C19.4669 13.4391 19.9694 12.5375 20.7401 11.9875C19.9694 11.4375 19.4669 10.5359 19.4669 9.51691V6.56055C19.4669 5.21435 18.3756 4.12305 17.0294 4.12305H16.5V2.99805H17.0294Z"
          fill="white"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`When an element is hovered in visual builder mode > JSON RTE field (multiple) > should have outline 1`] = `
<div
  data-cslp="all_fields.bltapikey.en-us.json_rich_text_editor_multiple_"
>
  <p
    data-cslp="all_fields.bltapikey.en-us.json_rich_text_editor_multiple_.0"
  />
  <p
    data-cslp="all_fields.bltapikey.en-us.json_rich_text_editor_multiple_.1"
  />
</div>
`;

exports[`When an element is hovered in visual builder mode > JSON RTE field (multiple) > should have outline 2`] = `
<div
  class="visual-builder__hover-outline visual-builder__hover-outline--unclickable go3177626044 go1719569523"
  data-testid="visual-builder__hover-outline"
  style="top: 34px; left: 34px; width: 828px; height: 54.3984375px;"
/>
`;

exports[`When an element is hovered in visual builder mode > JSON RTE field (multiple) > should have outline on individual instances 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.json_rich_text_editor_multiple_.0"
/>
`;

exports[`When an element is hovered in visual builder mode > JSON RTE field (multiple) > should have outline on individual instances 2`] = `
<div
  class="visual-builder__hover-outline visual-builder__hover-outline--unclickable go3177626044 go1719569523"
  data-testid="visual-builder__hover-outline"
  style="top: 51px; left: 51px; width: 27.7734375px; height: 20.3984375px;"
/>
`;

exports[`When an element is hovered in visual builder mode > JSON RTE field > should have custom cursor 1`] = `
<div
  class="go1688149084 visual-builder__cursor visible"
  data-icon="json_rte"
  data-testid="visual-builder__cursor"
>
  <div
    class="visual-builder__cursor-wrapper"
  >
    <div
      class="visual-builder__cursor-pointer go3046085498"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0.0167948 0.602214C-0.0784404 0.246792 0.246794 -0.0784402 0.602216 0.0167948L15.6457 4.04767C16.0914 4.1671 16.1259 4.78625 15.6962 4.95447L8.17161 7.90048C8.04753 7.94906 7.94936 8.04723 7.90078 8.17131L4.95449 15.6962C4.78627 16.1259 4.16712 16.0914 4.04769 15.6457L0.0167948 0.602214Z"
          fill="#5D50BE"
        />
      </svg>
    </div>
    <div
      class="visual-builder__cursor-icon go4261356330"
    >
      <svg
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M8.67113 7.5005C7.94625 7.5005 7.35863 8.08812 7.35863 8.813V9.87593C7.35863 10.1866 7.61047 10.4384 7.92113 10.4384C8.23179 10.4384 8.48363 10.1866 8.48363 9.87593V8.813C8.48363 8.70944 8.56757 8.6255 8.67113 8.6255H11.4375V15.6584H10.3575C10.0468 15.6584 9.79501 15.9103 9.79501 16.2209C9.79501 16.5316 10.0468 16.7834 10.3575 16.7834H13.9834C14.294 16.7834 14.5459 16.5316 14.5459 16.2209C14.5459 15.9103 14.294 15.6584 13.9834 15.6584H12.5625V8.6255H15.3293C15.4329 8.6255 15.5168 8.70945 15.5168 8.813V9.87593C15.5168 10.1866 15.7687 10.4384 16.0793 10.4384C16.39 10.4384 16.6418 10.1866 16.6418 9.87593V8.813C16.6418 8.08812 16.0542 7.5005 15.3293 7.5005H8.67113Z"
          fill="white"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M6.97059 2.99805C5.00307 2.99805 3.40809 4.59303 3.40809 6.56055V9.51691C3.40809 10.5707 2.55381 11.425 1.5 11.425V12.55C2.55381 12.55 3.40809 13.4043 3.40809 14.4581V17.4145C3.40809 19.382 5.00307 20.977 6.97059 20.977H7.5V19.852H6.97059C5.6244 19.852 4.53309 18.7607 4.53309 17.4145V14.4581C4.53309 13.4391 4.03059 12.5375 3.25988 11.9875C4.03059 11.4375 4.53309 10.5359 4.53309 9.51691V6.56055C4.53309 5.21435 5.6244 4.12305 6.97059 4.12305H7.5V2.99805H6.97059Z"
          fill="white"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M17.0294 2.99805C18.9969 2.99805 20.5919 4.59303 20.5919 6.56055V9.51691C20.5919 10.5707 21.4462 11.425 22.5 11.425V12.55C21.4462 12.55 20.5919 13.4043 20.5919 14.4581V17.4145C20.5919 19.382 18.9969 20.977 17.0294 20.977H16.5V19.852H17.0294C18.3756 19.852 19.4669 18.7607 19.4669 17.4145V14.4581C19.4669 13.4391 19.9694 12.5375 20.7401 11.9875C19.9694 11.4375 19.4669 10.5359 19.4669 9.51691V6.56055C19.4669 5.21435 18.3756 4.12305 17.0294 4.12305H16.5V2.99805H17.0294Z"
          fill="white"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`When an element is hovered in visual builder mode > JSON RTE field > should have outline 1`] = `
<p
  data-cslp="all_fields.bltapikey.en-us.json_rte"
/>
`;

exports[`When an element is hovered in visual builder mode > JSON RTE field > should have outline 2`] = `
<div
  class="visual-builder__hover-outline visual-builder__hover-outline--unclickable go3177626044 go1719569523"
  data-testid="visual-builder__hover-outline"
  style="top: 51px; left: 51px; width: 27.7734375px; height: 20.3984375px;"
/>
`;
